Fix background image causing layout jumps

--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -3,6 +3,7 @@
   display: flex;
   min-width: var(--pageMinWidth);
   flex-direction: column;
+  justify-content: flex-start;
   gap: calc(8 * var(--unit));
   overflow-x: hidden;
 }
@@ -11,12 +12,14 @@
   --width: 1200px;
   --height: 1239px;
   position: absolute;
+  z-index: -1;
   top: calc(-1.2 * var(--height));
   left: calc(50% - 0.75 * var(--width));
   width: calc(1.5 * var(--width));
   height: calc(1.5 * var(--height));
   animation: backgroundAnimation 30s linear infinite alternate;
   background-size: cover;
+  pointer-events: none;
 }
 
 @keyframes backgroundAnimation {
